--- a/Rapport 6/fys2150r6_polarization_nichoka.tex
+++ b/Rapport 6/fys2150r6_polarization_nichoka.tex
@@ -68,7 +68,7 @@
   \begin{@twocolumnfalse}
     \maketitle
     \begin{abstract}
-      Studying the properties of linearly and circularly polarized light and testing how well the properties match up to theoretical predictions.
+      Studying the properties of linearly polarized light, and how one can determine the polarization of light by the use of polarization filters. Then studying how reflecting and transmitting light through a glass affects the polarization of light, and how this plays into the design of Polaroid sunglasses. Finally, studying the optical properties of crystalline calcite and how it can be used to rotate $\vec E$ in waveplates.
     \end{abstract}
   \end{@twocolumnfalse}
 ]
@@ -267,6 +267,16 @@
     Following, a second $\lambda/4$ waveplate was added next to the previous, effectively yielding a $\lambda/2$ waveplate. The polarizer was then set to $+45^\circ$ and the analyzer to $-45^\circ$. The newly added waveplate was then rotated until there luminosity of the projected light reached a maxima. The analyzer was subsequently set to $+45^\circ$, which resulted the luminosity of the projected light reaching a minima. implying that the direction of the $\vec E$ field had been rotated by $90^\circ$ after having traversed the waveplates.
 
 \section{\label{sect:discuss}Discussion}
+  \subsection{Polarization of spectral lamp}
+    Whilst suggested it was suggested that the light emitted from the sodium spectral lamp emitted unpolarized, mostly monochromatic light, the data in Fig. \ref{fig:ana_plot} seems to suggest otherwise, that a small component, roughly 10\%, of the light is polarized in the horizontal axis. However, this data could also be explained by some ambient light source containing polarized light. In retrospect, recording the background luminosity when the spectral lamp turned off would have been a good idea, as it would provide an easy answer to this question.
+
+    However, the data in Fig. \ref{fig:malus2} also hints at the presence of a systematic error. When filtered through two tangential polarizers, one expects zero intensity. A third possibility, is also that the polarization filters simply aren't perfect and allows some light of different polarization pass through. It was noted in the lab journal that there were "small bright holes" in the filters, which does strengthen my suspicion that this is the cause of this unexpected behavior.
+
+  \subsection{Relative intensities of S and P polarized light in reflections}
+    As shown in the data presented in figures \ref{fig:ppolar}, \ref{fig:spolar}. When light is reflected off a glass surface, the component of light which is polarized parallel with the plane of incidence has in general, a larger relative intensity compared to tangentially polarized light. This comes into play in the manufacture of Polaroid sunglasses, which as seen are polarized in the vertical axis, which in most circumstances is parallel to the plane of incidence of light reflected from such things as puddles of water, or the ocean. The latter of which of particular interest to anyone who might travel at sea, where a large amount of sunlight will be reflected from the surface of water, the largest relative amount of which is P-polarized light.
+
+    This was again observed when investigating the transmittance of polarized light through a glass plate for different angles of incidence. When the angle of incidence was 0, the transmittance was seemingly not affected by the polarization of light. However, when changing the angle to correlate to the Brewster angle of the material, it was observed that the intensity of the intensity of projected P-polarized light was was at a maximum, implying that the majority of the P-polarized light was transmitted through the plate rather than being reflected
+
 
 \section{\label{sect:conclusion}Conclusion}
 
