--- a/Rapport 6/references_rep6.bib
+++ b/Rapport 6/references_rep6.bib
@@ -1,6 +1,6 @@
 @misc{ data:luxmeter,
     author = "{Extech Instruments}",
-    title = "Model 401025 Digital Light Meter, \url{http://www.uio.no/studier/emner/matnat/fys/FYS2150/v18/kursmateriell/datablader-og-brukermanualer/extech_lysma%CC%8Aler_401025_manual.pdf}",
+    title = "Model 401025 Digital Light Meter",
     year = "2005",
     howpublished = "\url{http://www.uio.no/studier/emner/matnat/fys/FYS2150/v18/kursmateriell/datablader-og-brukermanualer/extech_lysma%CC%8Aler_401025_manual.pdf}",
     note = "[Online; accessed 30-May-2018]"
@@ -13,3 +13,13 @@
     url = "https://en.wikipedia.org/w/index.php?title=Birefringence&oldid=840700183",
     note = "[Online; accessed 30-May-2018]"
   }
+
+@book{bolger,
+    edition = {1st},
+    title = {Svingninger og bolgers fysikk},
+    isbn = {978-1541147850},
+    pagetotal = {498},
+    publisher = {CreateSpace Independent Publishing Platform},
+    author = {Vistnes, A. I},
+    date = {2001}
+}
