--- a/Rapport 6/fys2150r6_V2.tex
+++ b/Rapport 6/fys2150r6_V2.tex
@@ -1,78 +1,84 @@
-\documentclass[11pt,a4paper, twocolumn]{article}
-\usepackage{float}
-\usepackage{verbatim}
-\usepackage{subfig}
-\usepackage[T1]{fontenc}
-\usepackage[utf8]{inputenc}
-\usepackage{geometry}
-\geometry{verbose,lmargin=2cm,rmargin=2cm, bmargin=3cm, tmargin=3cm}
-\usepackage{enumitem}
-\usepackage{wrapfig}
-\usepackage{tikz}
-\usetikzlibrary{decorations.markings}
-\usepackage{calc}
-\usepackage{wrapfig}
-\usepackage{graphicx}
-\usepackage{amssymb}
-\usepackage{amsmath}
-\usepackage{esint}
-\usepackage{blindtext}
-\usepackage{hyperref}
-\usepackage{listings}
+              
+% ****** Start of file apssamp.tex ******
+%
+%   This file is part of the APS files in the REVTeX 4.1 distribution.
+%   Version 4.1r of REVTeX, August 2010
+%
+%   Copyright (c) 2009, 2010 The American Physical Society.
+%
+%   See the REVTeX 4 README file for restrictions and more information.
+%
+% TeX'ing this file requires that you have AMS-LaTeX 2.0 installed
+% as well as the rest of the prerequisites for REVTeX 4.1
+%
+% See the REVTeX 4 README file
+% It also requires running BibTeX. The commands are as follows:
+%
+%  1)  latex apssamp.tex
+%  2)  bibtex apssamp
+%  3)  latex apssamp.tex
+%  4)  latex apssamp.tex
+%
+\documentclass[%
+ reprint,
+%superscriptaddress,
+%groupedaddress,
+%unsortedaddress,
+%runinaddress,
+%frontmatterverbose, 
+%preprint,
+%showpacs,preprintnumbers,
+%nofootinbib,
+%nobibnotes,
+%bibnotes,
+ amsmath,amssymb,
+ aps,
+%pra,
+%prb,
+%rmp,
+%prstab,
+%prstper,
+%floatfix,
+]{revtex4-1}
 
-\hypersetup{
-    colorlinks=true,
-    linkcolor=blue,
-    filecolor=magenta,
-    urlcolor=cyan,
-}
-\usepackage{listings}
-\lstset{ %
-  backgroundcolor=\color{white},   % choose the background color; you must add \usepackage{color} or \usepackage{xcolor}; should come as last argument
-  basicstyle=\footnotesize,        % the size of the fonts that are used for the code
-  breakatwhitespace=false,         % sets if automatic breaks should only happen at whitespace
-  breaklines=true,                 % sets automatic line breaking
-  captionpos=t,                    % sets the caption-position to bottom
-  commentstyle=\color{teal},    % comment style
-  deletekeywords={...},            % if you want to delete keywords from the given language
-  escapeinside={\%*}{*)},          % if you want to add LaTeX within your code
-  extendedchars=true,              % lets you use non-ASCII characters; for 8-bits encodings only, does not work with UTF-8
-  frame=single,                    % adds a frame around the code
-  keepspaces=true,                 % keeps spaces in text, useful for keeping indentation of code (possibly needs columns=flexible)
-  keywordstyle=\color{blue},       % keyword style
- % language=Python,                 % the language of the code
-  morekeywords={*,...},           % if you want to add more keywords to the set
-  numbers=left,                    % where to put the line-numbers; possible values are (none, left, right)
-  numbersep=5pt,                   % how far the line-numbers are from the code
-  numberstyle=\tiny\color{black}, % the style that is used for the line-numbers
-  rulecolor=\color{black},         % if not set, the frame-color may be changed on line-breaks within not-black text (e.g. comments (green here))
-  showspaces=false,                % show spaces everywhere adding particular underscores; it overrides 'showstringspaces'
-  showstringspaces=false,          % underline spaces within strings only
-  showtabs=false,                  % show tabs within strings adding particular underscores
-  stepnumber=1,                    % the step between two line-numbers. If it's 1, each line will be numbered
-  tabsize=2,                       % sets default tabsize to 2 spaces
-  title=\lstname                   % show the filename of files included with \lstinputlisting; also try caption instead of title
-}
+\usepackage{graphicx}% Include figure files
+\usepackage{dcolumn}% Align table columns on decimal point
+\usepackage{bm}% bold math
+\usepackage{hyperref}% add hypertext capabilities
+%\usepackage[mathlines]{lineno}% Enable numbering of text and display math
+%\linenumbers\relax % Commence numbering lines
+
+%\usepackage[showframe,%Uncomment any one of the following lines to test 
+%%scale=0.7, marginratio={1:1, 2:3}, ignoreall,% default settings
+%%text={7in,10in},centering,
+%%margin=1.5in,
+%%total={6.5in,8.75in}, top=1.2in, left=0.9in, includefoot,
+%%height=10in,a5paper,hmargin={3cm,0.8in},
+%]{geometry}
+\bibliographystyle{plain}
+
+%\graphicspath{{C:\Users\Nick\Documents\GitHub\FYS2150\lab1}}
+
 \begin{document}
 
-\title{Polarization\\
-\normalsize{FYS2150 Lab Report}\\}
+%\preprint{APS/123-QED}
+
+\title{FYS2150 \\
+Lab Report: Time and Frequency}% Force line breaks with \\
 
 \author{Nicholas Karlsen}
 % \email{nichoka@student.matnat.uio.no}
 
 \date{\today}% It is always \today, today,
-%  but any date may be explicitly specified
+             %  but any date may be explicitly specified
 
-\twocolumn[
-  \begin{@twocolumnfalse}
-    \maketitle
-    \begin{abstract}
-      Studying the properties of linearly polarized light, and how one can determine the polarization of light by the use of polarization filters. Then studying how reflecting and transmitting light through a glass affects the polarization of light, and how this plays into the design of Polaroid sunglasses. Finally, studying the optical properties of crystalline calcite and how it can be used to rotate $\vec E$ in waveplates.
-    \end{abstract}
-  \end{@twocolumnfalse}
-]
 
+
+\begin{abstract}
+  Studying the properties of linearly polarized light, and how one can determine the polarization of light by the use of polarization filters. Then studying how reflecting and transmitting light through a glass affects the polarization of light, and how this plays into the design of Polaroid sunglasses. Finally, studying the optical properties of crystalline calcite and how it can be used to rotate $\vec E$ in waveplates.
+\end{abstract}
+
+\maketitle
 %\tableofcontents
 
 \section{\label{sect:intro}Introduction}
@@ -81,12 +87,20 @@
 \section{\label{sect:theory}Theory}
   
   \subsection{Polarization}
+
+  \subsection{The Brewster angle}
+    When light hits a reflective surface, it is partially reflected and transmitted. For a particular angle of incidence, light with which is polarized at paralell to the plane of incidence is fully transmitted. This angle is named the Brewster angle, $\phi_B$ and is defined mathemtaically in Eqn. \ref{eqn:brewster}. In particular, when a wave goes from Air to another medium, such as light, the equation simplifies to $\tan \phi_B \approx n_2$, as the refractive index of air is $n_{air}\approx 1$.
+    \begin{equation}
+        \tan \phi_B = \frac{n_2}{n_1}
+        \label{eqn:brewster}
+    \end{equation}
+
     
 
   \subsection{Birefringence}
     Certain materials, such as Calcite crystal exhibit birefringent behavior, where it effectively has two separate refractive indices for light polarized at right angle to each other, meaning that when unpolarized light is passed through the crystal, two displaced images will be visible. Birefringence can occur for different reasons, but in the case of crystalline Calcite, it is due to the uniaxial geometry of its lattice (See fig. \ref{fig:calcite}). Where light which is polarized is perpendicular to this optical axis will follow a certain, set refractive index, regardless of the crystals orientation. 
 
-    \begin{figure}[H]
+    \begin{figure}[h!]
       \center
       \includegraphics[width=8cm]{scripts/figs/calcite.jpg}
       \caption{Crystaline structure of calcite (\textbf{Source:} \url{http://lecturedemo.ph.unimelb.edu.au/Optics/Crystal-optics/Oh-1-Calcite-Crystal-Model/Calcite-Diagram})}
@@ -105,7 +119,7 @@
     The uncertainty of the luminosity measured by the luxmeter in the range we measured is $\pm (5\% + 2\enspace \textup{digits})$ \cite{data:luxmeter}. However, in the presence of other ambient light sources the measurements taken in this, and subsequent measurements may not accurately reflect the intended nature of the experiment.
 
 
-  \begin{figure}[H]
+  \begin{figure}[h!]
     \center
     \includegraphics[width=8cm]{scripts/figs/diagram_1.png}
     \caption{Aparature to test the polarization of light emitted from a spectral lamp using a polarization filter with variable angle $\theta$ as an analyzer and measuring the intensity of the filtered light using the luxmeter. \textbf{Note:} Analyzer and Polarizer are misspelled in this and subsequent figures due to a poor translation of the terminology}
@@ -116,7 +130,7 @@
 
     In order to test Malus' law experimentally, we added a second polarization filter to our existing aperature (see sect. \ref{subsect:polar_lamp}), setting the first polarization filter to a fixed angle at $0^\circ$ whilst the second one is used as the analyzer, depicted in Fig. \ref{fig:lux_ana_pola_lamp}. In order to minimize the effects that ambient light and other potential contaminants, the apparatus was kept as tightly stacked as possible. The intensity registered by the luxmeter was again measured in $10^\circ$ increments in the range $-90^\circ$ to $90^\circ$ which was noted in the lab journal. 
 
-    \begin{figure}[H]
+    \begin{figure}[h!]
       \center
       \includegraphics[width=8cm]{scripts/figs/diagram_2.png}
       \caption{Aparature to test Malus' law, where the polarizer is kept at a constant angle while the analyzer is varied.}
@@ -125,7 +139,7 @@
 
     Afterwards, a third polarization filter was placed after the analyzer and set to a fixed angle at $90^\circ$ (see Fig. \ref{fig:lux_pola_ana_pola_lamp}). The angle of the analyzer was once again varied as before, and the intensity recorded by the luxmeter was noted in the journal.
 
-    \begin{figure}[H]
+    \begin{figure}[h!]
       \center
       \includegraphics[width=8cm]{scripts/figs/diagram_3.png}
       \caption{Alternative aparature to test Malus' law, where the two polarizers are kept at a constant angle while the analyzer is varied.}
@@ -139,7 +153,7 @@
 
       Afterwards, we investigated the direction of transmission of a pair of polaroid glasses using an analyzer. The analyzer was rotated and the change in intensity of light was observed through the polaroid glasses.
 
-    \begin{figure}[H]
+    \begin{figure}[h!]
       \center
       \includegraphics[width=8cm]{scripts/figs/modified_spectrometer.png}
       \caption{Modified spectrometer used to test how the intensity of reflected, polarized light changes with the angle of incidence.}
@@ -154,7 +168,7 @@
 
     Afterwards, the polarization of the light after having passed through the glass plate was then observed by adjusting the analyzer for different angles of the glass plate. In particular, we adjusted the glass plate to the brewster angle which was found for the prism in section \ref{subsect:reflection_experimental}.
 
-    \begin{figure}[H]
+    \begin{figure}[h!]
       \center
       \includegraphics[width=8cm]{scripts/figs/diagram_4.png}
       \caption{}
@@ -162,11 +176,11 @@
     \end{figure}
 
   \subsection{Observing birefringence in crystalline Calcite}
-    We had two samples of crystalline calcite. One of which was naturally occurring sample, and another which was cut tangentially to its optical axis on two opposing sides. Both of the crystals were transparent\footnote{I believe the particular type of calcite used is named Iceland spar, or at the very least, it looks quite similar to it. See \url{https://en.wikipedia.org/wiki/Iceland_spar}}, and text was clearly readable when looking through them. The crystals were placed on an illuminated panel, on top of which was some text printed on transparent plastic. We then observed the text by looking through the two calcite crystals, both with and without a polarization filter acting as an Analyzer. 
+    We had two samples of crystalline calcite. One of which was naturally occurring sample, and another which was cut tangentially to its optical axis on two opposing sides. Both of the crystals were transparent, and text was clearly readable when looking through them. The crystals were placed on an illuminated panel, on top of which was some text printed on transparent plastic. We then observed the text by looking through the two calcite crystals, both with and without a polarization filter acting as an Analyzer. 
 
     Afterwards, we used an aparature as the one depicted in Fig. \ref{fig:calcite} to investigate how the crystals affected a thin beam of light which is passed through it. The crystals were held inbetween the analysator and lens, and we investigated how the intensity of the dots projected on the screen varied as we changed the angle of the analyzer.
 
-    \begin{figure}[H]
+    \begin{figure}[h!]
       \center
       \includegraphics[width=8cm]{scripts/figs/diagram_5.png}
       \caption{Aperature used to test both the qualitative effects on a thin beam of light being passed through a calcite sample as well as the polarization of this light, which is projected onto the screen.}
@@ -176,7 +190,7 @@
   \subsection{Circular polarization of light using Calcite waveplates}
     In order to investigate the effect of the polarization of light emitted by the spectral lamp when passed through $\lambda /2$ waveplates, where $\lambda=550$, the most abundent wavelength of visible light emitted from the sodium spectral lamp, an aparature as depicted in Fig. \ref{fig:waveplate} was prepared. The aparature allowed for the rotation of the waveplates along the axis paralell to the light being passed through it from the spectral lamp. There was however no markings on the waveplate to indicate its current orientation, which had to be determined by a methodic approach by the use of the analyzer.
 
-    \begin{figure}[H]
+    \begin{figure}[h!]
       \center
       \includegraphics[width=8cm]{scripts/figs/diagram_6.png}
       \caption{Aparature used to investigate how a calcite waveplate affects the polarization of polarized light}
@@ -195,7 +209,7 @@
 
   The polarization of light emitted by the Sodium spectral lamb was investigated using an analyzer, and measured intensities using the luxmeter is presented in Table \ref{tab:ana}. A graph of this data is also provided in Fig. \ref{fig:ana_plot} for added clarity.
 
-  \begin{table}[H]
+  \begin{table}[h!]
       \center
       \caption{Measured intensity when passing unpolarized light through a single polarization filter, $\theta$ denoting the angle of the filter. Aparature depicted in Fig. \ref{fig:lux_ana_lamp}. A graph of this data set is shown in Fig. \ref{fig:ana_plot}}
        \begin{tabular}{r | l}
@@ -205,7 +219,7 @@
        \label{tab:ana}
   \end{table}
 
-  \begin{figure}[H]
+  \begin{figure}[h!]
     \center
     \includegraphics[width=8cm]{scripts/polartest.png}
     \caption{Graphical depiction of the data presented in table \ref{tab:ana}}
@@ -217,7 +231,7 @@
   The measured intensities measured of $0^\circ$ polarized light for different angles $\theta$ of an analyzer, as depicted in Fig. \ref{fig:lux_ana_pola_lamp} is presented in Table \ref{fig:malus1} such that it should satisfy the proportionality $I \propto \cos^2(\theta)$ in accordance with Malus law. In addition to the measured data points, there is also a linear fit with its errors $\delta m, \delta c$.
 
 
-  \begin{figure}[H]
+  \begin{figure}[h!]
     \center
     \includegraphics[width=8cm]{scripts/malus1.png}
     \caption{$E(\theta)$ denotes the intensity of light measured by the luxmeter as a function of the angle of the analyzer. $\delta m$ and $\delta c$ denote the error of the constants $m$, $c$ in the linear fit of the form $y=mx+c$.}
@@ -226,7 +240,7 @@
 
   Following, in Fig. \ref{fig:malus2} are the intensity measurements presented as a function of the angle of the analyzer in the aparature depicted in \ref{fig:lux_pola_ana_pola_lamp} where light is first polarized at $0^\circ$, passed through an analyzer of variable angle $\theta$, polarized again at $+90^\circ$ before its intensity is measured by the luxmeter.
   
-  \begin{figure}[H]
+  \begin{figure}[h!]
     \center
     \includegraphics[width=8cm]{scripts/malus2.png}
     \caption{Intensity of light measured by luxmeter for different angles $\theta$ of analyzer which is positioned between two tangential polarizers at angles $-90^\circ$, $0$ respectively. See Fig. \ref{fig:lux_pola_ana_pola_lamp}}
@@ -238,14 +252,14 @@
 
   The intensities for P and S polarized light reflected off a prism at different angles $\theta$ are presented in Figures \ref{fig:ppolar}, \ref{fig:spolar} respectively. In both graphs, the angle on the $x$-axis does not match the angle $\phi$ in Fig. \ref{fig:mod_spectro}, but rather $\phi + 90^\circ$. Additionally, the data prior to the primary peak in all plots have been left in, but should be ignored for reasons explained in section \ref{subsect:reflection_experimental}, as they deviate from the theoretical model due to flaws in the apparatus.
 
-  \begin{figure}[H]
+  \begin{figure}[h!]
     \center
     \includegraphics[width=8cm]{scripts/ppolar.png}
     \caption{Intensity profile due to p-polarized light, where $\phi_P$ denotes the Brewster angle. Note that the measurements for angles prior to the peak are to be ignored as discussed in the experimental section.}
     \label{fig:ppolar}
   \end{figure}
 
-  \begin{figure}[H]
+  \begin{figure}[h!]
     \center
     \includegraphics[width=8cm]{scripts/spolar.png}
     \caption{Intensity profile due to p-polarized light from two separate attempts of the experiment. Note that the measurements for angles prior to the peaks are to be ignored as discussed in the experimental section.}
@@ -283,12 +297,14 @@
 
 \section{\label{sect:conclusion}Conclusion}
   The experiments 
-\onecolumn
 
-\bibliographystyle{plain}
+\newpage
 \bibliography{references_rep6.bib}
 
 %%%%%%%%%%%%%%%%%%%%%%%%
 %%% END OF MAIN BODY %%%
 %%%%%%%%%%%%%%%%%%%%%%%%
 \end{document}
+%
+% ****** End of file apssamp.tex ******
+              
