--- a/Rapport 6/fys2150r6_V2.tex
+++ b/Rapport 6/fys2150r6_V2.tex
@@ -64,7 +64,7 @@
 %\preprint{APS/123-QED}
 
 \title{FYS2150 \\
-Lab Report: Time and Frequency}% Force line breaks with \\
+Lab Report: Polarization}% Force line breaks with \\
 
 \author{Nicholas Karlsen}
 % \email{nichoka@student.matnat.uio.no}
@@ -82,6 +82,8 @@ Lab Report: Time and Frequency}% Force line breaks with \\
 %\tableofcontents
 
 \section{\label{sect:intro}Introduction}
+
+    This report consists of a summary of a series of experiments in which we studied the polarization of light, and its properties. The goal was to leave the lab with a better understanding on how one can observe the polarization of light both directly and through measurements, as well as how a proper understanding of how polarized light behaves can lead to better design decisions. Additionally, the optical properties of calcite was explored, and how these properties could be used as another way to alter the polarization of light.
   
 
 \section{\label{sect:theory}Theory}
@@ -309,8 +311,7 @@ Lab Report: Time and Frequency}% Force line breaks with \\
 
 
 \section{\label{sect:conclusion}Conclusion}
-  The experiments 
-
+  When looked at in combination, the experiments described in this report form an understanding on how light can be polarized and how its polarization can be determined using polarization filters. How the light acts when reflected off a surface and one example on how this behavior can be used in a practical way. Lastly, it was shown how the optical properties of crystalline calcite can be used to rotate the direction of polarization. All in all providing a practical understanding of how polarization works and how it can be manipulated.
 \newpage
 \bibliography{references_rep6.bib}
 
