--- a/Rapport 6/fys2150r6_V2.tex
+++ b/Rapport 6/fys2150r6_V2.tex
@@ -89,7 +89,7 @@ Lab Report: Polarization}% Force line breaks with \\
 \section{\label{sect:theory}Theory}
   
   \subsection{Polarization}
-    The polarization of light is a wave-like property of light which essentially describes the direction in which the light waves oscillate as it propagates.
+    The polarization of light is a wave-like property of which essentially describe the direction in which the light waves oscillate as they propagate.
     When light is said to be unpolarized, this essentially means that the light oscillates in all radial directions relative to its direction of propagation, where as linearly polarized light only oscillates in a specific direction. Additionally, there is circular polarization. Where the direction of polarization changes angularly as the wave is propagated forward.
 
     In order to study the polarization of light, one can use polarization filters which allow for the filtering out of light with a specific angle of polarization. The intensity of light transmitted through a linear polarization filter is given my Malus' law, in Eqn. \ref{eqn:malus}, where $I$ denotes the intensity of light after transmission, $I_0$ before and the angles $\theta_1$, $\theta_2$ denote the angles of the polarization filter and the polarization the of light being transmitted through it it receptively.
@@ -99,11 +99,11 @@ Lab Report: Polarization}% Force line breaks with \\
         \label{eqn:malus}
     \end{equation}
 
-    Experimentally, a polarization filter can be used to polarize light in a specific direction, in which case it is referred to as a polarizer. Or it can be used to determine the direction of polarization, in which case it is referred to as an analyzer.
+    Experimentally, a polarization filter can be used to filter out light in a specific direction, in which case it is referred to as a polarizer. Or it can be used to determine the direction of polarization, in which case it is referred to as an analyzer.
 
 
   \subsection{The Brewster angle}
-    When light hits a reflective surface, it is partially reflected and transmitted. For a particular angle of incidence, light which is polarized at paralell to the plane of incidence is fully transmitted. This angle is named the Brewster angle, $\phi_B$ and is defined mathemtaically in Eqn. \ref{eqn:brewster}. In particular, when a wave goes from Air to another medium, such as light, the equation simplifies to $\tan \phi_B \approx n_2$, as the refractive index of air is $n_{air}\approx 1$. Which is derived from Snell's Law. For more, see \cite{bolger}.
+    When light hits a reflective surface, it is partially reflected and transmitted. For a particular angle of incidence, light which is polarized at paralell to the plane of incidence is fully transmitted. This angle is named the Brewster angle, $\phi_B$ and is defined mathemtaically in Eqn. \ref{eqn:brewster}. In particular, when a wave goes from Air to another medium, such as glass, the equation simplifies to $\tan \phi_B \approx n_2$, as the refractive index of air is $n_{air}\approx 1$. Which is derived from Snell's Law. For more, see \cite{bolger}.
     \begin{equation}
         \tan \phi_B = \frac{n_2}{n_1}
         \label{eqn:brewster}
@@ -113,7 +113,7 @@ Lab Report: Polarization}% Force line breaks with \\
     
 
   \subsection{Birefringence}
-    Certain materials, such as Calcite crystal exhibit birefringent behavior, where it effectively has two separate refractive indices for light polarized at right angle to each other, meaning that when unpolarized light is passed through the crystal, two displaced images will be visible. Birefringence can occur for different reasons, but in the case of crystalline Calcite, it is due to the uniaxial geometry of its lattice (See fig. \ref{fig:calcite}). Where light which is polarized is perpendicular to this optical axis will follow a certain, set refractive index, regardless of the crystals orientation. This refractive index, denoted $n_o$ is referred to as the Ordinary refractive index. The refractive index, which depends on the angle at which the incident ray enters the crystal relative to the optical axis is denotes by $n_e$, the extraordinary refractive index.
+    Certain materials, such as Calcite crystal exhibit birefringent behavior, where it effectively has two separate refractive indices for light polarized at right angle to each other, meaning that when unpolarized light is passed through the crystal, two displaced images will be visible. Birefringence can occur for different reasons, but in the case of crystalline Calcite, it is due to the uniaxial geometry of its lattice (See fig. \ref{fig:calcite}). Where light which is polarized perpendicular to this optical axis will follow a certain, set refractive index, regardless of the crystals orientation. This refractive index, denoted $n_o$ is referred to as the Ordinary refractive index. The refractive index, which depends on the angle at which the incident ray enters the crystal relative to the optical axis is denotes by $n_e$, the extraordinary refractive index.
 
     \begin{figure}[h!]
       \center
@@ -177,7 +177,7 @@ Lab Report: Polarization}% Force line breaks with \\
 
   \subsection{Light transmitted through an angled glass plate}
 
-    In order to investigate how light is transmitted through a glass plate, we used an aparature as the one depcited in Fig. \ref{fig:glassplate}. The glass plate was oriented tangentilly to the incoming, unpolarized light beam, and the angle which it made in the direction paralell to the beam could be adjusted. There was also a anglemeasurer with a maker which allowed us to read the angle which the glass plate had to the vertical axis. It was also noted that the glass plate used is of the same material as the prism used in section \ref{subsect:reflection_experimental}.
+    In order to investigate how light is transmitted through a glass plate, we used an aparature as the one depcited in Fig. \ref{fig:glassplate}. The glass plate was oriented tangentilly to the incoming, unpolarized light beam, and the angle which it made in the direction paralell to the beam could be adjusted. There was also an angle measurer with a marker which allowed us to read the angle which the glass plate had to the vertical axis. It was also noted that the glass plate used is of the same material as the prism used in section \ref{subsect:reflection_experimental}.
 
     The distance between the single slit and convex lens was adjusted untill the line projected onto the screen was in focus.
 
@@ -186,12 +186,12 @@ Lab Report: Polarization}% Force line breaks with \\
     \begin{figure}[h!]
       \center
       \includegraphics[width=8cm]{scripts/figs/diagram_4.png}
-      \caption{}
+      \caption{Aparature used to investigate the polarization angles of light transmitted through an angled glass plate}
       \label{fig:glassplate}
     \end{figure}
 
   \subsection{Observing birefringence in crystalline Calcite}
-    We had two samples of crystalline calcite. One of which was naturally occurring sample, and another which was cut tangentially to its optical axis on two opposing sides. Both of the crystals were transparent, and text was clearly readable when looking through them. The crystals were placed on an illuminated panel, on top of which was some text printed on transparent plastic. We then observed the text by looking through the two calcite crystals, both with and without a polarization filter acting as an Analyzer. 
+    We had two samples of crystalline calcite. One of which was naturally occurring, and another which was cut tangentially to its optical axis on two opposing sides. Both of the crystals were transparent, and text was clearly readable when looking through them. The crystals were placed on an illuminated panel, on top of which was some text printed on transparent plastic. We then observed the text by looking through the two calcite crystals, both with and without a polarization filter acting as an Analyzer. 
 
     Afterwards, we used an aparature as the one depicted in Fig. \ref{fig:calcite} to investigate how the crystals affected a thin beam of light which is passed through it. The crystals were held inbetween the analysator and lens, and we investigated how the intensity of the dots projected on the screen varied as we changed the angle of the analyzer.
 
@@ -267,6 +267,8 @@ Lab Report: Polarization}% Force line breaks with \\
 
   The intensities for P and S polarized light reflected off a prism at different angles $\theta$ are presented in Figures \ref{fig:ppolar}, \ref{fig:spolar} respectively. In both graphs, the angle on the $x$-axis does not match the angle $\phi$ in Fig. \ref{fig:mod_spectro}, but rather $\phi + 90^\circ$. Additionally, the data prior to the primary peak in all plots have been left in, but should be ignored for reasons explained in section \ref{subsect:reflection_experimental}, as they deviate from the theoretical model due to flaws in the apparatus.
 
+  Using the relation for Brewsters angle in Eqn. \ref{eqn:brewster}, and asuming an uncertainty in the angle of $\pm2^\circ$, the refractive intex, $n$ of the glass prism is $\tan(\phi_B + 90^\circ) \approx 1.4 \pm 0.1 = n$.
+
   \begin{figure}[h!]
     \center
     \includegraphics[width=8cm]{scripts/ppolar.png}
@@ -311,7 +313,7 @@ Lab Report: Polarization}% Force line breaks with \\
 
 
 \section{\label{sect:conclusion}Conclusion}
-  When looked at in combination, the experiments described in this report form an understanding on how light can be polarized and how its polarization can be determined using polarization filters. How the light acts when reflected off a surface and one example on how this behavior can be used in a practical way. Lastly, it was shown how the optical properties of crystalline calcite can be used to rotate the direction of polarization. All in all providing a practical understanding of how polarization works and how it can be manipulated.
+  When looked at in combination, the experiments described in this report form an understanding on how light can be filtered based on its polarization, and how the polarization of light can be determined by using polarization filters. How the light acts when reflected off a surface and one example on how this behavior can be used in a practical way. Lastly, it was shown how the optical properties of crystalline calcite can be used to rotate the direction of polarization. All in all providing a practical understanding of how polarization works and how it can be manipulated.
 \newpage
 \bibliography{references_rep6.bib}
 
